log
Thu Apr  7 16:11:12 UTC 2022: 
 hashmap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  4|5
total_score: 20/70
be2d0af
Thu Apr  7 16:13:19 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
524ab7a
Thu Apr  7 16:14:30 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
f2e5597
Sat Apr  9 04:35:39 UTC 2022: 
 hashmap.c | 41 +++++++++++++++++++++++++++++++----------
 1 file changed, 31 insertions(+), 10 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:61:13: error: unused variable ‘oldBuck’ [-Werror=unused-variable]
     Pair ** oldBuck = map->buckets;
             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b49d23
Sat Apr  9 04:42:15 UTC 2022: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
eec264a
Sat Apr  9 04:43:03 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
3757fe6
Sat Apr  9 04:48:15 UTC 2022: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
c4b88cd
Sat Apr  9 04:49:26 UTC 2022: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
2084b91
Sat Apr  9 04:57:29 UTC 2022: 
 hashmap.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:116:9: error: null argument where non-null required (argument 2) [-Werror=nonnull]
     if (strcmp(map->buckets[i]->key, NULL) == 0)
         ^~~~~~
hashmap.c:118:16: error: null argument where non-null required (argument 2) [-Werror=nonnull]
         while (strcmp(map->buckets[i]->key, NULL) == 0)
                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
20325a4
Sat Apr  9 04:59:18 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8ddd02c
Sat Apr  9 05:03:09 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a6a1899
Sat Apr  9 05:06:38 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:118:9: error: statement with no effect [-Werror=unused-value]
         for (i; i < map->capacity; i++)
         ^~~
cc1: all warnings being treated as errors
Compilation failed
b039e35
Sat Apr  9 05:07:14 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
69c765d
Sat Apr  9 05:16:07 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d0b8d0a
